WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121052
REGRESSION (
r155377
): Convert the media elements that were RenderBlocks to RenderBlockFlows
https://bugs.webkit.org/show_bug.cgi?id=121052
Summary
REGRESSION (r155377): Convert the media elements that were RenderBlocks to Re...
Dave Hyatt
Reported
2013-09-09 15:06:37 PDT
Convert the media elements that were RenderBlocks to RenderBlockFlows
Attachments
Patch that fixes build bustage.
(1.98 KB, patch)
2013-09-09 15:07 PDT
,
Dave Hyatt
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2013-09-09 15:07:04 PDT
Created
attachment 211098
[details]
Patch that fixes build bustage.
Dave Hyatt
Comment 2
2013-09-09 15:14:46 PDT
Fixed in
r155390
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug