REGRESSION (r155377): Convert the media elements that were RenderBlocks to RenderBlockFlows https://bugs.webkit.org/show_bug.cgi?id=121052

Reviewed by Anders Carlsson.

Convert a couple of media renderers that I missed from RenderBlock to RenderBlockFlow.
The previous patch that I landed added asserts that get triggered now when this
situation occurs.

* rendering/RenderMediaControlElements.cpp:
(WebCore::RenderMediaVolumeSliderContainer::RenderMediaVolumeSliderContainer):
(WebCore::RenderMediaVolumeSliderContainer::layout):
(WebCore::RenderTextTrackContainerElement::RenderTextTrackContainerElement):
(WebCore::RenderTextTrackContainerElement::layout):
* rendering/RenderMediaControlElements.h:



Canonical link: https://commits.webkit.org/138968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155390 268f45cc-cd09-0410-ab3c-d52691b4dbfc